[package]
name = "cretonne-tools"
authors = ["The Cretonne Project Developers"]
version = "0.13.2"
description = "Binaries for testing the Cretonne libraries"
license = "Apache-2.0"
documentation = "https://cretonne.readthedocs.io/"
repository = "https://github.com/cretonne/cretonne"
publish = false

[[bin]]
name = "cton-util"
path = "src/cton-util.rs"

[dependencies]
cfg-if = "0.1"
cretonne-codegen = { path = "lib/codegen", version = "0.13.2" }
cretonne-reader = { path = "lib/reader", version = "0.13.2" }
cretonne-frontend = { path = "lib/frontend", version = "0.13.2" }
cretonne-wasm = { path = "lib/wasm", version = "0.13.2", optional = true }
cretonne-native = { path = "lib/native", version = "0.13.2" }
cretonne-filetests = { path = "lib/filetests", version = "0.13.2" }
cretonne-module = { path = "lib/module", version = "0.13.2" }
cretonne-faerie = { path = "lib/faerie", version = "0.13.2" }
cretonne-simplejit = { path = "lib/simplejit", version = "0.13.2" }
cretonne = { path = "lib/umbrella", version = "0.13.2" }
filecheck = "0.3.0"
docopt = "1"
serde = "1.0.8"
serde_derive = "1.0.8"
term = "0.5.1"
capstone = { version = "0.4", optional = true }
wabt = { version = "0.4", optional = true }
target-lexicon = "0.0.3"

[features]
default = ["disas", "wasm"]
disas = ["capstone"]
wasm = ["wabt", "cretonne-wasm"]

[workspace]

# We want debug symbols on release binaries by default since it allows profiling
# tools to give more accurate information. We can always strip them out later if
# necessary.
[profile.release]
debug = true
[profile.bench]
debug = true
